# intelligent_robotics_project

./: README.md
docs/: index.html
k/: Cargo.toml
k/examples/: interactive_ik.rs  interactive_my_arm.rs  my_arm.rs  print.rs  project.rs
k/src/: ik.rs
md/: project.html  project.md
proposal/: README.md
